--- a/chirimen-driver-i2c-pca9685/package.json
+++ b/chirimen-driver-i2c-pca9685/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "chirimen-driver-i2c-pca9685",
+  "name": "@chirimen-raspi/chirimen-driver-i2c-pca9685",
   "version": "1.0.0",
   "main": "PCA9685.js",
   "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/chirimen-oh/chirimen-drivers.git"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
