--- a/packages/chirimen-driver-i2c-tcs34725/package.json
+++ b/packages/chirimen-driver-i2c-tcs34725/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@chirimen-raspi/chirimen-driver-i2c-sht30",
+  "name": "@chirimen-raspi/chirimen-driver-i2c-tcs34725",
   "version": "1.0.0",
-  "main": "SHT30.js",
+  "main": "TCS34725.js",
   "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/chirimen-oh/chirimen-drivers.git",
-    "directory": "chirimen-driver-i2c-sht30"
+    "directory": "packages/chirimen-driver-i2c-tcs34725"
   },
   "publishConfig": {
     "access": "public"
