--- a/packages/grove-gesture/package.json
+++ b/packages/grove-gesture/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@chirimen/grove-gesture",
   "version": "0.0.1",
-  "main": "PAJ7620.js",
+  "main": "paj7620.js",
   "license": "MIT",
   "repository": {
     "type": "git",
