--- a/packages/pcf8591/package.json
+++ b/packages/pcf8591/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@chirimen/pcf8591",
   "version": "0.0.1",
-  "main": "PCF8591.js",
+  "main": "pcf8591.js",
   "license": "MIT",
   "repository": {
     "type": "git",
