--- a/packages/mpu6500/package.json
+++ b/packages/mpu6500/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@chirimen/mpu6500",
   "version": "0.0.1",
-  "main": "MPU6500.js",
+  "main": "mpu6500.js",
   "license": "MIT",
   "repository": {
     "type": "git",
