--- a/packages/s11059/package.json
+++ b/packages/s11059/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@chirimen/s11059",
   "version": "0.0.1",
-  "main": "S11059.js",
+  "main": "s11059.js",
   "license": "MIT",
   "repository": {
     "type": "git",
