--- a/packages/canzasi/package.json
+++ b/packages/canzasi/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "@chirimen/canzasi-blink",
+  "name": "@chirimen/canzasi",
   "version": "0.0.1",
   "main": "canzasi.js",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/chirimen-oh/chirimen-drivers.git"
+    "url": "https://github.com/chirimen-oh/chirimen-drivers.git",
+    "directory": "packages/canzasi"
   },
   "publishConfig": {
     "access": "public"
