--- a/packages/pca9685-pwm/package.json
+++ b/packages/pca9685-pwm/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@chirimen/pca9685-pwm",
   "version": "0.0.1",
-  "main": "pca9685_pwm.js",
+  "main": "pca9685-pwm.js",
   "license": "MIT",
   "repository": {
     "type": "git",
