--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "packages/*"
   ],
   "devDependencies": {
-    "lerna": "^3.16.4"
+    "lerna": "~3"
   },
   "scripts": {
     "release": "lerna publish"
