--- a/packages/adt7410/package.json
+++ b/packages/adt7410/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/chirimen-oh/chirimen-drivers.git"
+    "url": "https://github.com/chirimen-oh/chirimen-drivers.git",
+    "directory": "packages/adt7410"
   },
   "publishConfig": {
     "access": "public"
