--- a/packages/pca9685-pwm/package.json
+++ b/packages/pca9685-pwm/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/chirimen-oh/chirimen-drivers.git"
+    "url": "https://github.com/chirimen-oh/chirimen-drivers.git",
+    "directory": "packages/pca9685-pwm"
   },
   "publishConfig": {
     "access": "public"
