--- a/packages/sht30/package.json
+++ b/packages/sht30/package.json
@@ -6,7 +6,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/chirimen-oh/chirimen-drivers.git",
-    "directory": "packages/chirimen-driver-i2c-sht30"
+    "directory": "packages/sht30"
   },
   "publishConfig": {
     "access": "public"
