--- a/packages/tcs34725/package.json
+++ b/packages/tcs34725/package.json
@@ -6,7 +6,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/chirimen-oh/chirimen-drivers.git",
-    "directory": "packages/chirimen-driver-i2c-tcs34725"
+    "directory": "packages/tcs34725"
   },
   "publishConfig": {
     "access": "public"
