--- a/packages/veml6070/package.json
+++ b/packages/veml6070/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@chirimen/veml6070",
   "version": "0.0.1",
+  "description": "Driver for VEML6070 with WebI2C",
   "main": "veml6070.js",
   "module": "veml6070.mjs",
   "license": "MIT",
