--- a/packages/adt7410/package.json
+++ b/packages/adt7410/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@chirimen/adt7410",
   "version": "0.0.1",
+  "description": "Driver for ADT7410 with WebI2C",
   "main": "adt7410.js",
   "module": "adt7410.mjs",
   "license": "MIT",
