--- a/packages/amg8833/package.json
+++ b/packages/amg8833/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@chirimen/amg8833",
   "version": "0.0.1",
+  "description": "Driver for AMG8833 with WebI2C",
   "main": "amg8833.js",
   "module": "amg8833.mjs",
   "license": "MIT",
