--- a/packages/arduino-stepping-motor/package.json
+++ b/packages/arduino-stepping-motor/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@chirimen/arduino-stepping-motor",
   "version": "0.0.1",
+  "description": "Driver for stepping motor with Arduino/WebI2C",
   "main": "arduino-stepping-motor.js",
   "module": "arduino-stepping-motor.mjs",
   "license": "MIT",
