--- a/packages/bh1750/package.json
+++ b/packages/bh1750/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@chirimen/bh1750",
   "version": "0.0.1",
+  "description": "Driver for BH1750 with WebI2C",
   "main": "bh1750.js",
   "module": "bh1750.mjs",
   "license": "MIT",
