--- a/packages/gp2y0e03/package.json
+++ b/packages/gp2y0e03/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@chirimen/gp2y0e03",
   "version": "0.0.1",
+  "description": "Driver for GP2Y0E03 with WebI2C",
   "main": "gp2y0e03.js",
   "module": "gp2y0e03.mjs",
   "license": "MIT",
