--- a/packages/grove-accelerometer/package.json
+++ b/packages/grove-accelerometer/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@chirimen/grove-accelerometer",
   "version": "0.0.1",
+  "description": "Driver for ADXL345 with WebI2C",
   "main": "grove-accelerometer.js",
   "module": "grove-accelerometer.mjs",
   "license": "MIT",
