--- a/packages/grove-light/package.json
+++ b/packages/grove-light/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@chirimen/grove-light",
   "version": "0.0.1",
+  "description": "Driver for TSL2561 with WebI2C",
   "main": "grove-light.js",
   "module": "grove-light.mjs",
   "license": "MIT",
