--- a/packages/grove-oled-display/package.json
+++ b/packages/grove-oled-display/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@chirimen/grove-oled-display",
   "version": "0.0.1",
+  "description": "Driver for SSD1308/SSD1306 with WebI2C",
   "main": "grove-oled-display.js",
   "module": "grove-oled-display.mjs",
   "license": "MIT",
