--- a/packages/mpu6050/package.json
+++ b/packages/mpu6050/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@chirimen/mpu6050",
   "version": "0.0.1",
+  "description": "Driver for MPU6050 with WebI2C",
   "main": "mpu6050.js",
   "module": "mpu6050.mjs",
   "license": "MIT",
