--- a/packages/pca9685-pwm/package.json
+++ b/packages/pca9685-pwm/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@chirimen/pca9685-pwm",
   "version": "0.0.1",
+  "description": "Driver for PCA9685 using PWM with WebI2C",
   "main": "pca9685-pwm.js",
   "module": "pca9685-pwm.mjs",
   "license": "MIT",
