--- a/packages/pca9685/package.json
+++ b/packages/pca9685/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@chirimen/pca9685",
   "version": "0.0.1",
+  "description": "Driver for PCA9685 with WebI2C",
   "main": "pca9685.js",
   "module": "pca9685.mjs",
   "license": "MIT",
