--- a/packages/pcf8591/package.json
+++ b/packages/pcf8591/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@chirimen/pcf8591",
   "version": "0.0.1",
+  "description": "Driver for PCF8591 with WebI2C",
   "main": "pcf8591.js",
   "module": "pcf8591.mjs",
   "license": "MIT",
