--- a/packages/sht30/package.json
+++ b/packages/sht30/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@chirimen/sht30",
   "version": "0.0.1",
+  "description": "Driver for SHT30 with WebI2C",
   "main": "sht30.js",
   "module": "sht30.mjs",
   "license": "MIT",
