--- a/packages/vl53l0x/package.json
+++ b/packages/vl53l0x/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@chirimen/vl53l0x",
   "version": "0.0.1",
+  "description": "Driver for VL53L0X with WebI2C",
   "main": "vl53l0x.js",
   "module": "vl53l0x.mjs",
   "license": "MIT",
