--- a/packages/ads1x15/package.json
+++ b/packages/ads1x15/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chirimen/ads1x15",
-  "version": "0.0.1",
+  "version": "1.0.0-alpha.0",
   "description": "Driver for ADS1x15 with WebI2C",
   "main": "ads1x15.js",
   "module": "ads1x15.mjs",
