--- a/packages/grove-gesture/package.json
+++ b/packages/grove-gesture/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chirimen/grove-gesture",
-  "version": "0.0.1",
+  "version": "1.0.0-alpha.0",
   "description": "Driver for PAJ7620 with WebI2C",
   "main": "grove-gesture.js",
   "module": "grove-gesture.mjs",
