--- a/packages/neopixel-i2c/package.json
+++ b/packages/neopixel-i2c/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chirimen/neopixel-i2c",
-  "version": "0.0.1",
+  "version": "1.0.0-alpha.0",
   "description": "Driver for usedbytes/neopixel_i2c with WebI2C",
   "main": "neopixel-i2c.js",
   "module": "neopixel-i2c.mjs",
