--- a/node-examples/s11059/package.json
+++ b/node-examples/s11059/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "i2c-vl53l0x-example",
+  "name": "i2c-s11059-example",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@chirimen/vl53l0x": "^1.0.2-alpha.0",
+    "@chirimen/s11059": "^1.0.1-alpha.0",
     "node-web-i2c": "^1.0.0"
   }
 }
