create lint action

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "build": "yarn workspaces run build",
     "release": "lerna publish",
-    "lint": "eslint --ext .mjs packages"
+    "lint": "eslint --ext .mjs packages",
+    "lint-report": "eslint --output-file eslint_report.json --format json --ext .mjs packages"
   }
 }
