--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "build": "yarn workspaces run build",
     "release": "lerna publish",
-    "lint": "eslint --ext .mjs packages",
-    "lint-report": "eslint --output-file eslint_report.json --format json --ext .mjs packages"
+    "lint": "eslint --ext .js,.mjs .",
+    "lint-report": "eslint --output-file eslint_report.json --format json --ext .js,.mjs ."
   }
 }
