--- a/examples/mpr121/package.json
+++ b/examples/mpr121/package.json
@@ -1,9 +1,5 @@
 {
   "name": "i2c-grove-touch-example",
   "version": "1.0.0",
-  "private": true,
-  "dependencies": {
-    "@chirimen-raspi/chirimen-driver-i2c-grove-touch": "^1.0.0",
-    "@chirimen-raspi/polyfill": "^1.0.1"
-  }
+  "private": true
 }
