--- a/packages/grove-light/package.json
+++ b/packages/grove-light/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chirimen/grove-light",
-  "version": "1.0.0-alpha.4",
+  "version": "1.0.0",
   "description": "Driver for TSL2561 with WebI2C",
   "main": "grove-light.js",
   "module": "grove-light.mjs",
