use --pre-dist-tag

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "build": "yarn workspaces run build",
-    "release": "lerna publish",
+    "release": "lerna publish --pre-dist-tag next",
     "lint": "eslint --ext .js,.mjs .",
     "lint-report": "eslint --output-file eslint_report.json --format json --ext .js,.mjs ."
   }
