--- a/node-examples/bmp280/package.json
+++ b/node-examples/bmp280/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@chirimen/bmp280": "^1.0.0-alpha.1",
-    "node-web-i2c": "^1.1.1"
+    "@chirimen/bmp280": "latest",
+    "node-web-i2c": "latest"
   }
 }
