--- a/node-examples/mpu6050/package.json
+++ b/node-examples/mpu6050/package.json
@@ -4,6 +4,6 @@
   "private": true,
   "dependencies": {
     "@chirimen/mpu6050": "^1.0.0-alpha.1",
-    "node-web-i2c": "^1.1.1"
+    "node-web-i2c": "latest"
   }
 }
