--- a/node-examples/tsl2561/package.json
+++ b/node-examples/tsl2561/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@chirimen/grove-light": "^1.0.0-alpha.4",
-    "node-web-i2c": "^1.1.1"
+    "@chirimen/grove-light": "latest",
+    "node-web-i2c": "latest"
   }
 }
