--- a/node-examples/vl53l0x/package.json
+++ b/node-examples/vl53l0x/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@chirimen/vl53l0x": "^1.0.3-alpha.0",
-    "node-web-i2c": "^1.1.1"
+    "@chirimen/vl53l0x": "latest",
+    "node-web-i2c": "latest"
   }
 }
