--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -2,11 +2,12 @@ env:
   browser: true
   node: true
   es6: true
-extends: 'eslint:recommended'
+extends: "eslint:recommended"
 globals:
   Atomics: readonly
   SharedArrayBuffer: readonly
 parserOptions:
   ecmaVersion: 2018
   sourceType: module
-rules: {}
+rules:
+  no-constant-condition: [error, { checkLoops: false }]
