--- a/packages/tca9548a/tsconfig.json
+++ b/packages/tca9548a/tsconfig.json
@@ -10,6 +10,7 @@
     "strictNullChecks": true,
     "strictFunctionTypes": true,
     "strictPropertyInitialization": true,
+    "noFallthroughCasesInSwitch": true,
     "noImplicitReturns": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true
