--- a/packages/tca9548a/tsconfig.json
+++ b/packages/tca9548a/tsconfig.json
@@ -5,11 +5,7 @@
     "target": "esnext",
     "moduleResolution": "node",
     "declaration": true,
-    "alwaysStrict": true,
-    "strictBindCallApply": true,
-    "strictNullChecks": true,
-    "strictFunctionTypes": true,
-    "strictPropertyInitialization": true,
+    "strict": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitReturns": true,
     "noUnusedLocals": true,
