--- a/packages/tca9548a/package.json
+++ b/packages/tca9548a/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chirimen/tca9548a",
-  "version": "1.0.0",
+  "version": "1.0.1-alpha.0",
   "description": "Driver for TCA9548A with WebI2C",
   "author": "Kohei Watanabe <kou029w@gmail.com>",
   "license": "MIT",
