--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,5 +7,13 @@ jobs:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v1
         with: { node-version: 12 }
+      - run: echo "::set-env name=YARN_CACHE_DIR::$(yarn cache dir)"
+      - uses: actions/cache@v1
+        with:
+          path: ${{ env.YARN_CACHE_DIR }}
+          key: yarn-${{ hashFiles('package.json') }}-${{ hashFiles('packages/**/package.json') }}
+          restore-keys: |
+            yarn-${{ hashFiles('package.json') }}-
+            yarn-
       - run: yarn
       - run: yarn build
