working treeに変更が無いことを保証

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,3 +17,10 @@ jobs:
             yarn-
       - run: yarn
       - run: yarn build
+      - name: The working tree is clean.
+        run: "[[ -z $(git status --porcelain) ]]"
+      - name: Show the working tree status.
+        if: failure()
+        run: |
+          git status
+          git diff
