enable maintain lock files weekly

--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,8 @@
 {
-  "extends": ["config:base", ":preserveSemverRanges"],
+  "extends": [
+    "config:base",
+    ":preserveSemverRanges",
+    ":maintainLockFilesWeekly"
+  ],
   "automerge": true
 }
