--- a/packages/tca9548a/package.json
+++ b/packages/tca9548a/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "doc": "typedoc",
     "build": "run-p build:*",
-    "build:esm": "tsc",
+    "build:esm": "tsc --declaration --outDir esm",
     "build:umd": "rollup -c"
   },
   "devDependencies": {
