--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "packages/*"
   ],
   "devDependencies": {
-    "eslint": "~7.2.0",
-    "lerna": "~3"
+    "eslint": "^7.2.0",
+    "lerna": "^3.22.1"
   },
   "scripts": {
     "build": "yarn workspaces run build",
