--- a/packages/tca9548a/package.json
+++ b/packages/tca9548a/package.json
@@ -26,13 +26,13 @@
     "build:umd": "rollup -c"
   },
   "devDependencies": {
-    "@rollup/plugin-typescript": "~3",
-    "@types/i2c-bus": "~5",
+    "@rollup/plugin-typescript": "^4.1.2",
+    "@types/i2c-bus": "^5.1.0",
     "node-web-i2c": "latest",
-    "npm-run-all": "~4",
-    "rollup": "~2.17.0",
-    "typedoc": "~0.17.0",
-    "typedoc-plugin-markdown": "~2",
-    "typescript": "~3.9.0"
+    "npm-run-all": "^4.1.5",
+    "rollup": "^2.17.1",
+    "typedoc": "^0.17.7",
+    "typedoc-plugin-markdown": "^2.3.1",
+    "typescript": "^3.9.5"
   }
 }
