--- a/packages/bmp180/package.json
+++ b/packages/bmp180/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chirimen/bmp180",
-  "version": "1.0.0-alpha.1",
+  "version": "1.0.0",
   "description": "Driver for BMP180 with WebI2C",
   "main": "bmp180.js",
   "module": "bmp180.mjs",
