--- a/packages/ak8963/package.json
+++ b/packages/ak8963/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chirimen/ak8963",
-  "version": "1.0.0-alpha.1",
+  "version": "1.0.0",
   "description": "Driver for AK8963 with WebI2C",
   "main": "ak8963.js",
   "module": "ak8963.mjs",
