--- a/packages/pca9685-pwm/package.json
+++ b/packages/pca9685-pwm/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chirimen/pca9685-pwm",
-  "version": "1.0.0-alpha.1",
+  "version": "1.0.0",
   "description": "Driver for PCA9685 using PWM with WebI2C",
   "main": "pca9685-pwm.js",
   "module": "pca9685-pwm.mjs",
