--- a/packages/ccs811/package.json
+++ b/packages/ccs811/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@chirimen/ccs811",
   "version": "1.0.0",
-  "description": "Driver for CCS811 with WebI2C",
-  "module": "sht30.mjs",
-  "license": "MIT",
+  "description": "Driver for ccs811 with WebI2C",
+  "main": "ccs811.js",
+  "module": "ccs811.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/chirimen-oh/chirimen-drivers.git",
