--- a/.eslintignore
+++ b/.eslintignore
@@ -1,5 +1,6 @@
 node_modules/
 # NOTE: UMDフォーマットのファイルなので無視
 /packages/**/*.js
-# TODO: sleepが定義されておらず大量にエラー
-/raspi-examples/
+# TODO: sleep など定義されておらず大量にエラー
+raspi-examples/
+microbit-examples/
