feat: create release and delete build workflow

--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "lerna": "^3.22.1"
   },
   "scripts": {
-    "build": "yarn workspaces run build",
-    "release": "lerna publish --pre-dist-tag next",
+    "release": "lerna publish from-package --yes --pre-dist-tag next",
     "lint": "eslint --ext .js,.mjs .",
     "lint-report": "eslint --output-file eslint_report.json --format json --ext .js,.mjs ."
   }
