--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,13 @@
-name: build
+name: release
 on: push
 jobs:
   main:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
+      - run: |
+          git config user.name release-bot
+          git config user.email release-bot@example
       - uses: actions/setup-node@v1
         with: { node-version: 14 }
       - id: yarn_cache
@@ -15,11 +18,6 @@ jobs:
           key: yarn-${{ hashFiles('yarn.lock') }}
           restore-keys: yarn-
       - run: yarn
-      - run: yarn build
-      - name: The working tree is clean.
-        run: "[[ -z $(git status --porcelain) ]]"
-      - name: Show the working tree status.
-        if: failure()
-        run: |
-          git status
-          git diff
+      - run: yarn release
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
