chore: 拡張子.mjsを諦める

--- a/node-examples/hello-world/package.json
+++ b/node-examples/hello-world/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@chirimen/hello-world-example",
   "version": "1.0.0",
-  "main": "main.mjs",
+  "main": "main.js",
   "license": "CC0-1.0",
   "dependencies": {
     "@chirimen/hello-world": "latest"
