--- a/packages/bme280/package.json
+++ b/packages/bme280/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.2",
   "description": "Driver for BME280 with WebI2C",
   "main": "index.js",
-  "module": "bme280.mjs",
+  "module": "bme280.js",
   "license": "MIT",
   "repository": {
     "type": "git",
