--- a/packages/bmp180/package.json
+++ b/packages/bmp180/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.2",
   "description": "Driver for BMP180 with WebI2C",
   "main": "index.js",
-  "module": "bmp180.mjs",
+  "module": "bmp180.js",
   "license": "MIT",
   "repository": {
     "type": "git",
