--- a/packages/ccs811/package.json
+++ b/packages/ccs811/package.json
@@ -4,6 +4,7 @@
   "description": "Driver for ccs811 with WebI2C",
   "main": "ccs811.js",
   "module": "ccs811.js",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "https://github.com/chirimen-oh/chirimen-drivers.git",
