--- a/packages/grove-oled-display/package.json
+++ b/packages/grove-oled-display/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.3",
   "description": "Driver for SSD1308/SSD1306 with WebI2C",
   "main": "index.js",
-  "module": "grove-oled-display.mjs",
+  "module": "grove-oled-display.js",
   "license": "MIT",
   "repository": {
     "type": "git",
