--- a/packages/mpu6050/package.json
+++ b/packages/mpu6050/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.2",
   "description": "Driver for MPU6050 with WebI2C",
   "main": "index.js",
-  "module": "mpu6050.mjs",
+  "module": "mpu6050.js",
   "license": "MIT",
   "repository": {
     "type": "git",
