--- a/packages/neopixel-i2c/package.json
+++ b/packages/neopixel-i2c/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.2",
   "description": "Driver for usedbytes/neopixel_i2c with WebI2C",
   "main": "index.js",
-  "module": "neopixel-i2c.mjs",
+  "module": "neopixel-i2c.js",
   "license": "MIT",
   "repository": {
     "type": "git",
