--- a/packages/pca9685-pwm/package.json
+++ b/packages/pca9685-pwm/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.2",
   "description": "Driver for PCA9685 using PWM with WebI2C",
   "main": "index.js",
-  "module": "pca9685-pwm.mjs",
+  "module": "pca9685-pwm.js",
   "license": "MIT",
   "repository": {
     "type": "git",
