--- a/packages/s11059/package.json
+++ b/packages/s11059/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.5",
   "description": "Driver for S11059 with WebI2C",
   "main": "index.js",
-  "module": "s11059.mjs",
+  "module": "s11059.js",
   "license": "MIT",
   "repository": {
     "type": "git",
