--- a/packages/vl53l0x/package.json
+++ b/packages/vl53l0x/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.6",
   "description": "Driver for VL53L0X with WebI2C",
   "main": "index.js",
-  "module": "vl53l0x.mjs",
+  "module": "vl53l0x.js",
   "license": "MIT",
   "repository": {
     "type": "git",
