--- a/packages/vl53l1x/package.json
+++ b/packages/vl53l1x/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.2",
   "description": "Driver for VL53L1X with WebI2C",
   "main": "index.js",
-  "module": "vl53l1x.mjs",
+  "module": "vl53l1x.js",
   "license": "MIT",
   "repository": {
     "type": "git",
