--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,7 @@
 name: release
-on: push
+on:
+  push:
+    branches: ["master"]
 jobs:
   main:
     runs-on: ubuntu-20.04
@@ -8,7 +10,7 @@ jobs:
       - run: |
           git config user.name release-bot
           git config user.email release-bot@example
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2
         with: { node-version: 14 }
       - id: yarn_cache
         run: echo "::set-output name=dir::$(yarn cache dir)"
