--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,9 @@ jobs:
           git config user.name release-bot
           git config user.email release-bot@example
       - uses: actions/setup-node@v2
-        with: { node-version: 14 }
+        with:
+          node-version: 14
+          scope: chirimen
       - id: yarn_cache
         run: echo "::set-output name=dir::$(yarn cache dir)"
       - uses: actions/cache@v2
