--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,5 +25,5 @@ jobs:
           npm run release
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-      - run: mxschmitt/action-tmate@v3
+      - uses: mxschmitt/action-tmate@v3
         if: failure()
