use --bundleConfigAsCjs flag
rollup.config.js がデフォルトで ESM 扱いになっていたので対応
https://zenn.dev/hankei6km/articles/rollup-config-js-as-esm

--- a/packages/ads1015/package.json
+++ b/packages/ads1015/package.json
@@ -14,7 +14,7 @@
     "access": "public"
   },
   "scripts": {
-    "build": "rollup -c",
+    "build": "rollup -c --bundleConfigAsCjs",
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
