--- a/packages/sgp40/package.json
+++ b/packages/sgp40/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "@chirimen/ICM20948",
+  "name": "@chirimen/sgp40",
   "version": "1.0.0",
-  "description": "Driver for ICM20948 with WebI2C",
+  "description": "Driver for SGP40 with WebI2C",
   "main": "index.js",
-  "module": "ICM20948.js",
+  "module": "sgp40.js",
   "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/chirimen-oh/chirimen-drivers.git",
-    "directory": "packages/ICM20948"
+    "directory": "packages/sgp40"
   },
   "publishConfig": {
     "access": "public"
