--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,14 +10,14 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: "lts/*"
-          cache: yarn
+          cache: npm
           registry-url: https://registry.npmjs.org/
-      - run: yarn
+      - run: npm ci
       - name: Release
         run: |
           git config user.name release-bot
           git config user.email release-bot@example
           git fetch --unshallow --tags
-          yarn release
+          node --run release
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
