add ahtx0,ens160,sh40 to dependencies in /packages/chirimen/package.json

--- a/packages/chirimen/package.json
+++ b/packages/chirimen/package.json
@@ -32,6 +32,7 @@
     "@chirimen/ads1x15": "latest",
     "@chirimen/adt7410": "latest",
     "@chirimen/aht10": "latest",
+    "@chirimen/ahtx0": "latest",
     "@chirimen/ak8963": "latest",
     "@chirimen/amg8833": "latest",
     "@chirimen/apds9960": "latest",
@@ -45,6 +46,7 @@
     "@chirimen/bmp280": "latest",
     "@chirimen/canzasi": "latest",
     "@chirimen/ccs811": "latest",
+    "@chirimen/ens160": "latest",
     "@chirimen/gp2y0e03": "latest",
     "@chirimen/grove-accelerometer": "latest",
     "@chirimen/grove-gesture": "latest",
@@ -70,6 +72,7 @@
     "@chirimen/seesaw": "latest",
     "@chirimen/sgp40": "latest",
     "@chirimen/sht30": "latest",
+    "@chirimen/sht40": "latest",
     "@chirimen/tca9548a": "latest",
     "@chirimen/tcs34725": "latest",
     "@chirimen/tsl2591": "latest",
