chirimen package への 3ドライバーの追加など（やりなおし） (#393)

--- a/packages/chirimen/package.json
+++ b/packages/chirimen/package.json
@@ -53,14 +53,17 @@
     "@chirimen/grove-light": "latest",
     "@chirimen/grove-oled-display": "latest",
     "@chirimen/grove-touch": "latest",
+    "@chirimen/grove-water-level-sensor": "latest",
     "@chirimen/hello-world": "latest",
     "@chirimen/ht16k33": "latest",
     "@chirimen/htu21d": "latest",
     "@chirimen/icm20948": "latest",
     "@chirimen/ina219": "latest",
     "@chirimen/ltr390": "latest",
+    "@chirimen/mcp9808": "latest",
     "@chirimen/microbit": "latest",
     "@chirimen/mlx90614": "latest",
+    "@chirimen/mma7660": "latest",
     "@chirimen/mpu6050": "latest",
     "@chirimen/mpu6500": "latest",
     "@chirimen/neopixel-i2c": "latest",
